Fixed Scrollbar Placement

--- a/css/activities.css
+++ b/css/activities.css
@@ -1199,7 +1199,7 @@ table {
   left: 0 !important;
   border: 0 !important;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow: visible;
   width: calc(100% - 130px) !important;
   max-width: 350px;
   padding: 1rem 1rem 0 1rem;
@@ -1207,6 +1207,10 @@ table {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+#helpScrollWrapper {
+  overflow-y: auto;
 }
 
 #helpBodyDiv .heading,
